# pyopt

./: .gitignore  README.md  pyproject.toml  setup.py
examples/: example.ipynb
pyopt/: __init__.py  data.py  func.py  gpr.py  optimiser.py  utils.py
pyopt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
